src/views/Description/Description.css
.navbar {
  background: #d3d3d3;
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: space-between;
}

.link {
  color: #001a5b;
  margin-top: 5px;
  margin-bottom: 5px;
  margin-right: 5px;
  cursor: pointer;
}

.container-description {
  /*background-color: F8F8F8;*/
}

li {
  padding-bottom: 2px;
  padding-top: 2px;
}
.item-description {
  text-align: left;
  vertical-align: center;
  margin-left: 20%;
  margin-right: 20%;
  margin-top: 5%;
  margin-bottom: 25%;
  background: white;
  padding: 5%;
}

.header-description {
  text-align: center;
  margin-top: 0px;
}

.container-footer-results {
  background: #d3d3d3;
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: space-between;
}

.url-line {
}

@media (max-width: 820px) {
  .url-line {
    font-size: 80%;
  }
}

